--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Aichu Tan - My WebMap Portfolio</title>
+    <title>Aichu Tan - My Portfolio</title>
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="./main.css" />
   </head>
   <body>
     <nav>
@@ -15,6 +15,7 @@
       </ul>
     </nav>
     <main>
+        <div class="container">
       <h2>Welcome!</h2>
       <p>
         Hello, my name is Aichu Tan. I am currently a graduate student in Big
@@ -27,7 +28,7 @@
         data visualization.
       </p>
 
-      <h3>Featured Projects</h3>
+      <h2>Featured Projects</h2>
       <ul>
         <li>
           <a
@@ -42,7 +43,7 @@
 
       <p>Read more about <a href="about.html">my life and journey</a>.</p>
     </main>
-
+</div>
     <footer>
       <p>
         Contact: <a href="mailto:dtan3697@sdsu.edu">dtan3697@sdsu.edu</a> |
@@ -51,3 +52,4 @@
     </footer>
   </body>
 </html>
+
