--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Aichu Tan - My Portfolio</title>
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="https://aichutan.github.io/MyPortfolio/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
     <nav>
