--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Aichu Tan - My Portfolio</title>
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    
   </head>
   <body>
     <nav>
