--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <li>
           <a href="#">Wildfire Risk and Resilience in Los Angeles County</a>
         </li>
+        <li>
+          <a href="#"> AI for Farmers: A YOLO and Language Model-Based Plant Disease Detection and Advisory System </a>
+        </li>
       </ul>
 
       <p>Read more about <a href="about.html">my life and journey</a>.</p>
