--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         <li>
           <a
             href="https://storymaps.arcgis.com/stories/983f5be9df0c427bb8748a8fde10072b"
-            >Understanding the Hispanic Community in San Diego (2024)</a
-          >
+            >Understanding the Hispanic Community in San Diego (2024)</a>
         </li>
         <li>
           <a href="#">Wildfire Risk and Resilience in Los Angeles County</a>
