--- a/index.html
+++ b/index.html
@@ -1,21 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Aichu Tan - My Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/cv">CV</a></li>
-        <li><a href="/blog">Blog</a></li>
-      </ul>
-    </nav>
-    <main>
-        <div class="container">
+---
+layout: default
+title: Aichu Tan- My Portfolio
+---
+
+<div class="container">
       <h2>Welcome!</h2>
       <p>
         Hello, my name is Aichu Tan. I am currently a graduate student in Big
@@ -46,12 +34,4 @@
       <p>Read more about <a href="about.html">my life and journey</a>.</p>
     </main>
 </div>
-    <footer>
-      <p>
-        Contact: <a href="mailto:dtan3697@sdsu.edu">dtan3697@sdsu.edu</a> |
-        <a href="https://github.com/AichuTan" target="_blank">GitHub Profile</a>
-      </p>
-    </footer>
-  </body>
-</html>
-
+   
