--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Aichu Tan- My Portfolio
 ---
+<div class="container">
 <h2>About Me</h2>
 <p>
 I’m Aichu Tan, a data enthusiast with a background in engineering and a passion for geospatial technology. 
@@ -17,3 +18,4 @@ to projects that have real-world impact — such as improving farming outcomes u
 <p>
 In my free time, I enjoy hiking, experimenting with new coding tools, and contributing to open-source projects that promote sustainability.
 </p>
+</div>
