--- a/cv/index.html
+++ b/cv/index.html
@@ -6,14 +6,14 @@ title: Aichu Tan- My Portfolio
 <h2>Education</h2>
 <ul>
   <li>MS in Big Data Analytics, San Diego State University (Expected 2025)</li>
-  <li>BS in [Your Undergraduate Degree], [Your University]</li>
+  <li>BS in Chemical Engineering, National Cheng Kung University</li>
 </ul>
 
 <h2>Skills</h2>
 <ul>
-  <li>Python, SQL, HTML/CSS, Streamlit, Leaflet, Git</li>
+  <li>Python, SQL, HTML/CSS, Streamlit, Tableau, Leaflet, Git</li>
   <li>Machine Learning: CNNs, YOLO, clustering, LLMs (LangChain)</li>
-  <li>Geospatial Tools: ArcGIS, QGIS, StoryMaps</li>
+  <li>Geospatial Tools: ArcGIS, StoryMaps, Mapbox</li>
 </ul>
 
 <h2>Projects</h2>
