--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: Aichu Tan- My Portfolio
         </li>
       </ul>
 
-      <p>Read more about <a href="about.html">my life and journey</a>.</p>
+      <p>Read more about <a href="{{ '/about/' | relative_url }}">my life and journey</a>.</p>
     </main>
 </div>
    
