--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ title: Aichu Tan- My Portfolio
 
       <h2>Featured Projects</h2>
       <ul>
+       <li>
+          <a href="#"> AI for Farmers: A YOLO and Language Model-Based Plant Disease Detection and Advisory System </a>
+        </li>
         <li>
           <a
             href="https://storymaps.arcgis.com/stories/983f5be9df0c427bb8748a8fde10072b"
@@ -27,7 +30,10 @@ title: Aichu Tan- My Portfolio
           <a href="#">Wildfire Risk and Resilience in Los Angeles County</a>
         </li>
         <li>
-          <a href="#"> AI for Farmers: A YOLO and Language Model-Based Plant Disease Detection and Advisory System </a>
+          <a href="https://sites.google.com/sdsu.edu/wagetheft/home?authuser=1">Anti-Wage Theft Data Project</a>
+        </li>
+      <li>
+          <a href="https://aichutan.github.io/Online-Ticket-Database-Management-System/ticket_reservation_insights_dashboard.html">Ticket Reservation Insights Dashboard</a>
         </li>
       </ul>
 
