--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@ title: Aichu Tan- My Portfolio
 <div class="container">
       <h2>Welcome!</h2>
       <p>
-        Hello, my name is Aichu Tan. I am currently a graduate student in Big
+        Hello, my name is Aichu Tan.<br> I am currently a graduate student in Big
         Data Analytics at San Diego State University. This website highlights a
         collection of my academic and personal projects, with a focus on web
-        mapping, data analytics, and artificial intelligence. Many of these
-        projects were developed during graduate coursework and reflect my
+        mapping, data analytics, and artificial intelligence. </p>
+      <p>  Many of these projects were developed during graduate coursework and reflect my
         passion for geospatial technology, database systems, and applying
         machine learning to real-world problems such as agriculture and public
         data visualization.
