--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@ title: Aichu Tan- My Portfolio
 
 <div class="container">
       <h2>Welcome!</h2>
-      <p>
-        Hello, my name is Aichu Tan.<br> I am currently a graduate student in Big
-        Data Analytics at San Diego State University. This website highlights a
-        collection of my academic and personal projects, with a focus on web
-        mapping, data analytics, and artificial intelligence. </p>
-      <p>  Many of these projects were developed during graduate coursework and reflect my
-        passion for geospatial technology, database systems, and applying
-        machine learning to real-world problems such as agriculture and public
-        data visualization.
-      </p>
+
+        <p>
+          I am currently a graduate student in Big Data Analytics at San Diego
+          State University. This website highlights a collection of my academic
+          and personal projects, with a focus on web mapping, data analytics,
+          and artificial intelligence.
+        </p>
+
+        <p>
+          Many of these projects were developed during graduate coursework and
+          reflect my passion for geospatial technology, database systems, and
+          applying machine learning to real-world problems such as agriculture
+          and public data visualization.
+        </p>
+
 
       <h2>Featured Projects</h2>
       <ul>
@@ -33,11 +38,12 @@ title: Aichu Tan- My Portfolio
           <a href="https://sites.google.com/sdsu.edu/wagetheft/home?authuser=1">Anti-Wage Theft Data Project</a>
         </li>
       <li>
-          <a href="https://aichutan.github.io/Online-Ticket-Database-Management-System/ticket_reservation_insights_dashboard.html">Ticket Reservation Insights Dashboard</a>
+          <a href="https://github.com/AichuTan/Online-Ticket-Database-Management-System">Database Management System</a>
         </li>
       </ul>
 
       <p>Read more about <a href="{{ '/about/' | relative_url }}">my life and journey</a>.</p>
+      </div>
     </main>
-</div>
+
    
