--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Aichu Tan- My Portfolio
 
 <div class="container">
       <h2>Welcome!</h2>
-
+        <p>Hello, my name is Aichu Tan.</p>
         <p>
           I am currently a graduate student in Big Data Analytics at San Diego
           State University. This website highlights a collection of my academic
