--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ title: Aichu Tan- My Portfolio
           <a href="https://sites.google.com/sdsu.edu/wagetheft/home?authuser=1">Anti-Wage Theft Data Project</a>
         </li>
       <li>
-          <a href="https://github.com/AichuTan/Online-Ticket-Database-Management-System">Database Management System</a>
+          <a href="https://github.com/AichuTan/Online-Ticket-Database-Management-System">Database Management System : Online Ticket Database Reservation System</a>
         </li>
       </ul>
 
