--- a/about/index.html
+++ b/about/index.html
@@ -18,4 +18,10 @@ to projects that have real-world impact — such as improving farming outcomes u
 <p>
 In my free time, I enjoy hiking, experimenting with new coding tools, and contributing to open-source projects that promote sustainability.
 </p>
+<div style="text-align: center; margin-top: 40px;">
+  <a href="{{ '/' | relative_url }}">
+    <button style="padding: 10px 20px; font-size: 16px;">Return to Homepage</button>
+  </a>
+</div>
+
 </div>
