--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@ In my free time, I enjoy hiking, experimenting with new coding tools, and contri
 </p>
 <div style="text-align: center; margin-top: 40px;">
   <a href="{{ '/' | relative_url }}">
-    <button style="padding: 10px 20px; font-size: 16px;">Return to Homepage</button>
+    <button style="padding: 10px 20px; font-size: 16px;">Return</button>
   </a>
 </div>
 
