--- a/cv/index.html
+++ b/cv/index.html
@@ -23,3 +23,9 @@ title: Aichu Tan- My Portfolio
 </ul>
 
 </div>
+
+<div style="text-align: center; margin-top: 40px;">
+  <a href="{{ '/' | relative_url }}">
+    <button style="padding: 10px 20px; font-size: 16px;">Return</button>
+  </a>
+</div>
