--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@ title: Aichu Tan- My Portfolio
       <li>
           <a href="https://github.com/AichuTan/Online-Ticket-Database-Management-System">Database Management System : Online Ticket Database Reservation System</a>
         </li>
+      <li>
+          <a href="https://aichutan.github.io/la-county-fire-risk-dashboard/">LA County Fire Risk Dashboard</a>
+        </li>
+
       </ul>
 
       <p>Read more about <a href="{{ '/about/' | relative_url }}">my life and journey</a>.</p>
